Refactor code and translate comments

--- a/style/style.css
+++ b/style/style.css
@@ -1,160 +1,160 @@
 .courier-new-font {
-    margin: 1em;
-    font-family: 'Courier New', Courier, monospace;
+  margin: 1em;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .main-fixed {
-    max-width: 900px;
-    margin: auto;
+  max-width: 900px;
+  margin: auto;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .thead-ubuntu tr th {
-    background-color: #F1502F;
-    color: white;
+  background-color: #F1502F;
+  color: white;
 }
 
 .striped-rows tr:nth-child(even) {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
 .img-left-wrap {
-    /* Выравнивание по левому краю */
-    float: left;
-    margin: 7px 7px 7px 0;
-    text-align: center;
-    width: 10%;
-    border: 3px solid #300a24;
-    border-radius: 3px;
+  /* Left alignment */
+  float: left;
+  margin: 7px 7px 7px 0;
+  text-align: center;
+  width: 10%;
+  border: 3px solid #300a24;
+  border-radius: 3px;
 }
 
 .quote {
-    text-align: right;
+  text-align: right;
 }
 
 .quote blockquote {
-    margin: 0%;
-    quotes: "“""”""‘""’";
-    padding-right: 20px;
-    border-right: 5px solid #F1502F;
+  margin: 0%;
+  quotes: "“""”""‘""’";
+  padding-right: 20px;
+  border-right: 5px solid #F1502F;
 }
 
 .quote blockquote p::before {
-    content: open-quote;
+  content: open-quote;
 }
 
 .quote blockquote p::after {
-    content: close-quote;
+  content: close-quote;
 }
 
-/* Терминал Ubuntu */
+/* Ubuntu terminal */
 code.terminal {
-    font-family: 'Ubuntu Mono', monospace;
-    background-color: #300a24;
-    color: white;
-    padding: 5px;
-    border-radius: 3px;
+  font-family: 'Ubuntu Mono', monospace;
+  background-color: #300a24;
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
 }
 
-/* Знак доллара перед командой */
+/* Dollar sign before the command */
 .dollar-sign::selection {
-    background: transparent;
+  background: transparent;
 }
 
 .dollar-sign::-moz-selection {
-    background: transparent;
+  background: transparent;
 }
 
-/* Отступ у абзаца (красная строка) */
+/* Paragraph indent (red line) */
 p {
-    text-indent: 3vw;
+  text-indent: 3vw;
 }
 
-/* Якорная ссылка */
+/* Anchor link */
 .anchor {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .anchor:link {
-    color: #000000;
+  color: #000000;
 }
 
 .anchor:visited {
-    color: #000000;
+  color: #000000;
 }
 
 .anchor:hover {
-    color: #F1502F;
+  color: #F1502F;
 }
 
 .anchor:active {
-    color: #F1502F;
+  color: #F1502F;
 }
 
-/* Обычный блок */
+/* Regular block */
 .block {
-    padding-top: 3vh;
+  padding-top: 3vh;
 }
 
-/* Описание заметки не нуждается в отступе */
+/* Note description does not need an indent */
 .note p {
-    text-indent: 0;
+  text-indent: 0;
 }
 
-/* Описание блока не нуждается в отступе */
+/* Block description does not need an indent */
 .block-description p {
-    text-indent: 0;
+  text-indent: 0;
 }
 
 ul li::marker {
-    color: red;
+  color: red;
 }
 
 .ad {
-    background-color: lightgreen;
-    text-align: center;
+  background-color: lightgreen;
+  text-align: center;
 }
 
 .feedback-form {
-    text-align: center;
-    margin: auto;
+  text-align: center;
+  margin: auto;
 }
 
 .feedback-form input {
-    display: inline-block;
-    margin: 1vh auto;
-    border: 3px solid #eee;
-    border-radius: 3px;
-    padding: 10px 20px;
+  display: inline-block;
+  margin: 1vh auto;
+  border: 3px solid #eee;
+  border-radius: 3px;
+  padding: 10px 20px;
 }
 
 .feedback-form textarea {
-    display: inline-block;
-    margin: 10px auto;
-    border: 1px solid #eee;
-    border-radius: 3px;
-    padding: 10px 20px;
+  display: inline-block;
+  margin: 10px auto;
+  border: 1px solid #eee;
+  border-radius: 3px;
+  padding: 10px 20px;
 }
 
 .footer-gray {
-    padding-top: 10vh;
-    text-align: center;
-    color: gray;
+  padding-top: 10vh;
+  text-align: center;
+  color: gray;
 }
 
 .footer-hr {
-    border-top: 1px solid lightgray;
+  border-top: 1px solid lightgray;
 }
 
 .icon-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .footer-icon {
-    text-align: center;
-    width: 2%;
-    height: 2%;
+  text-align: center;
+  width: 2%;
+  height: 2%;
 }
