--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -36,8 +36,8 @@
 }
 
 .quote blockquote {
-  margin: 0%;
-  quotes: "“""”""‘""’";
+  margin: 0;
+  quotes: "“" "”" "‘" "’";
   padding-right: 20px;
   border-right: 5px solid #F1502F;
 }
