--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,90 +1,18 @@
 @charset "UTF-8";
-.courier-new-font {
-  margin: 1em;
-  font-family: "Courier New", Courier, monospace;
-}
-
-.main-fixed {
-  max-width: 900px;
-  margin: auto;
-}
-
-.text-center {
+main h1, .ad, .social-icon__icon, .bottom-footer, .feedback-form {
   text-align: center;
 }
 
-.thead-ubuntu tr th {
-  background-color: #F1502F;
-  color: white;
-}
-
-.striped-rows tr:nth-child(even) {
-  background-color: lightgray;
-}
-
-.img-left-wrap {
-  /* Left alignment */
-  float: left;
-  margin: 7px 7px 7px 0;
-  text-align: center;
-  width: 10%;
-  border: 3px solid #300a24;
-  border-radius: 3px;
-}
-
-.quote {
-  text-align: right;
-}
-
-.quote blockquote {
-  margin: 0;
-  quotes: "“" "”" "‘" "’";
-  padding-right: 20px;
-  border-right: 5px solid #F1502F;
-}
-
-.quote blockquote p::before {
-  content: open-quote;
-}
-
-.quote blockquote p::after {
-  content: close-quote;
-}
-
-/* Ubuntu terminal */
-code.terminal {
-  font-family: "Ubuntu Mono", monospace;
-  background-color: #300a24;
-  color: white;
-  padding: 5px;
-  border-radius: 3px;
-}
-
-/* Dollar sign before the command */
-.dollar-sign::selection {
-  background: transparent;
-}
-
-.dollar-sign::-moz-selection {
-  background: transparent;
-}
-
-/* Paragraph indent (red line) */
-p {
-  text-indent: 3vw;
-}
-
-/* Anchor link */
-.anchor {
+.social-icon__link, .anchor {
   text-decoration: none;
 }
 
 .anchor:link {
-  color: #000000;
+  color: black;
 }
 
 .anchor:visited {
-  color: #000000;
+  color: black;
 }
 
 .anchor:hover {
@@ -95,69 +23,118 @@ p {
   color: #F1502F;
 }
 
-/* Regular block */
+.terminal {
+  font-family: "Ubuntu Mono", monospace;
+  background-color: #300a24;
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
+}
+.terminal .dollar-sign::selection {
+  background: transparent;
+}
+.terminal .dollar-sign::-moz-selection {
+  background: transparent;
+}
+
 .block {
   padding-top: 3vh;
 }
 
-/* Note description does not need an indent */
-.note p {
+.block__description {
   text-indent: 0;
 }
 
-/* Block description does not need an indent */
-.block-description p {
-  text-indent: 0;
+.quote {
+  text-align: right;
+}
+.quote blockquote {
+  margin: 0;
+  quotes: "“" "”" "‘" "’";
+  padding-right: 1em;
+  border-right: 5px solid #F1502F;
+}
+.quote blockquote::before {
+  content: open-quote;
+}
+.quote blockquote::after {
+  content: close-quote;
 }
 
+.feedback-form__submit, .feedback-form__input textarea {
+  display: inline-block;
+  border-radius: 3px;
+  padding: 10px 20px;
+}
+
+.feedback-form {
+  padding-top: 3vh;
+  margin: auto;
+}
+.feedback-form__input label {
+  text-align: left;
+}
+.feedback-form__input textarea {
+  margin: 10px auto;
+  border: 1px solid #eee;
+}
+.feedback-form__submit {
+  margin: 1vh auto;
+  border: 3px solid #eee;
+}
+
+.bottom-footer {
+  padding-top: 10vh;
+  color: gray;
+}
+.bottom-footer__hr {
+  border-top: 1px solid lightgray;
+}
+
+.social-icon__icon {
+  width: 36px;
+  height: 36px;
+}
+
+body {
+  margin: 1em;
+  font-family: "Courier New", Courier, monospace;
+}
+
+main {
+  max-width: 900px;
+  margin: auto;
+}
 ul li::marker {
   color: red;
 }
 
+p {
+  text-indent: 3vw;
+}
+
+.comparison-table thead tr th {
+  background-color: #F1502F;
+  color: white;
+}
+.comparison-table tbody tr:nth-child(even) {
+  background-color: lightgray;
+}
+
+.git-logo {
+  float: left;
+  margin: 7px 7px 7px 0;
+  width: 10%;
+  border: 3px solid #300a24;
+  border-radius: 3px;
+}
+
+.note p {
+  text-indent: 0;
+}
+
 .ad {
   background-color: lightgreen;
-  text-align: center;
-}
-
-.feedback-form {
-  text-align: center;
-  margin: auto;
-}
-
-.feedback-form input {
-  display: inline-block;
-  margin: 1vh auto;
-  border: 3px solid #eee;
-  border-radius: 3px;
-  padding: 10px 20px;
-}
-
-.feedback-form textarea {
-  display: inline-block;
-  margin: 10px auto;
-  border: 1px solid #eee;
-  border-radius: 3px;
-  padding: 10px 20px;
-}
-
-.footer-gray {
-  padding-top: 10vh;
-  text-align: center;
-  color: gray;
-}
-
-.footer-hr {
-  border-top: 1px solid lightgray;
-}
-
-.icon-link {
-  text-decoration: none;
-}
-
-.footer-icon {
-  text-align: center;
-  width: 2%;
-  height: 2%;
 }
 
 /*# sourceMappingURL=index.css.map */
