--- a/styles/scss/common/_common.scss
+++ b/styles/scss/common/_common.scss
@@ -8,23 +8,24 @@ $-anchor-color: black;
 
 .anchor {
   @extend %text-no-decoration;
+
+  &:link {
+    color: $-anchor-color;
+  }
+
+  &:visited {
+    color: $-anchor-color;
+  }
+
+  &:hover {
+    color: variables.$ubuntu-orange;
+  }
+
+  &:active {
+    color: variables.$ubuntu-orange;
+  }
 }
 
-.anchor:link {
-  color: $-anchor-color;
-}
-
-.anchor:visited {
-  color: $-anchor-color;
-}
-
-.anchor:hover {
-  color: variables.$ubuntu-orange;
-}
-
-.anchor:active {
-  color: variables.$ubuntu-orange;
-}
 
 // UBUNTU TERMINAL
 
@@ -36,22 +37,23 @@ $-anchor-color: black;
   border-radius: 3px;
 
   // Dollar sign before the command
-  .dollar-sign::selection {
+  #{&}__dollar-sign::selection {
     background: transparent;
   }
 
-  .dollar-sign::-moz-selection {
+  #{&}__dollar-sign::-moz-selection {
     background: transparent;
   }
 }
+
 
 // REGULAR BLOCK
 
 .block {
   padding-top: 3vh;
-}
 
-// Block description does not need an indent
-.block__description {
-  text-indent: 0;
+  // Block description does not need an indent
+  #{&}__description {
+    text-indent: 0;
+  }
 }
