--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -55,8 +55,8 @@ p {
   border-radius: 3px;
 }
 
-// Note does not need an indent
 .note {
+  // Note paragraph does not need an indent
   p {
     text-indent: 0;
   }
