--- a/styles/scss/common/_common.scss
+++ b/styles/scss/common/_common.scss
@@ -37,12 +37,18 @@ $-anchor-color: black;
   border-radius: 3px;
 
   // Dollar sign before the command.
-  #{&}__dollar-sign::selection {
-    background: transparent;
-  }
+  #{&}__dollar-sign {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 
-  #{&}__dollar-sign::-moz-selection {
-    background: transparent;
+    &::selection, &::-moz-selection {
+      background: transparent;
+    }
   }
 }
 
