Refactor HTML and SCSS structure

--- a/styles/scss/common/_common.scss
+++ b/styles/scss/common/_common.scss
@@ -53,23 +53,12 @@ $-anchor-color: black;
 }
 
 
-// REGULAR BLOCK
-
-.block {
-  padding-top: 3vh;
-
-  // Block description does not need an indent.
-  #{&}__description {
-    text-indent: 0;
-  }
-}
-
-
 // AD
 
 .ad {
   @extend %text-center;
 
+  padding: 5px;
   background-color: lightgreen;
 }
 
