--- a/styles/scss/common/_common.scss
+++ b/styles/scss/common/_common.scss
@@ -35,21 +35,13 @@ $-anchor-color: black;
   color: white;
   padding: 5px;
   border-radius: 3px;
+}
 
-  // Dollar sign before the command.
-  #{&}__dollar-sign {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
 
-    &::selection, &::-moz-selection {
-      background: transparent;
-    }
-  }
+// UNSELECTABLE TEXT
+
+.text-unselectable {
+  @extend %text-unselectable;
 }
 
 
