--- a/styles/scss/common/_extends.scss
+++ b/styles/scss/common/_extends.scss
@@ -6,3 +6,17 @@
   text-decoration: none;
 }
 
+%text-unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+
+  &::selection, &::-moz-selection {
+    background: transparent;
+  }
+}
+
