Add `border` mixin
Add `border` mixin and refactor all corresponding SCSS properties.

--- a/styles/scss/common/_common.scss
+++ b/styles/scss/common/_common.scss
@@ -1,5 +1,6 @@
 @use "variables";
 @use "extends";
+@use "mixins";
 
 
 // ANCHOR LINK
@@ -30,11 +31,12 @@ $-anchor-color: black;
 // UBUNTU TERMINAL
 
 .terminal {
+  @include mixins.border($radius: 3px);
+
   font-family: 'Ubuntu Mono', monospace;
   background-color: #300a24;
   color: white;
   padding: 5px;
-  border-radius: 3px;
 }
 
 
