--- a/styles/scss/common/_index.scss
+++ b/styles/scss/common/_index.scss
@@ -1,5 +1,4 @@
-@forward "variables";
-@forward "extends";
-@forward "mixins";
-@forward "common";
-
+@forward 'variables';
+@forward 'extends';
+@forward 'mixins';
+@forward 'common';
