--- a/styles/scss/components/_feedback.scss
+++ b/styles/scss/components/_feedback.scss
@@ -1,5 +1,4 @@
-@use "../common";
-
+@use '../common';
 
 $-border-color: #eee;
 
@@ -36,4 +35,3 @@ $-border-color: #eee;
     margin-top: 5px;
   }
 }
-
